# Galileo_Structure

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
design/: config_scene.ui
include/galileo/Application/: AppScene.h  ApplicationModel.h  ConfigScene.h  global.h
include/galileo/Framework/: Application.h  IApplicationModel.h  IScene.h  SceneMachine.h  global.h
src/galileo/: CMakeLists.txt
src/galileo/Application/: CMakeLists.txt
src/galileo/Framework/: Application.cpp  CMakeLists.txt  IApplicationModel.cpp  IScene.cpp
src/galileo/Loader/: CMakeLists.txt  main.cpp
